# models-router

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  dev_workflow.md  init.sh  main.py  pyproject.toml  pytest.ini  run_server.py  test_client.py
.ai/: architecture.md
.ai/workflows/: dev_workflow.md
.claude/: settings.local.json
.claude/agents/: python-pro.md
.github/workflows/: ci-cd.yaml  pr-check.yaml  release.yaml
devops/: README.md
devops/k8s/applications/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secrets.yaml  service.yaml
devops/k8s/infra/: README.md  argocd-install.yaml  argocd-server-configmap.yaml  argocd-server-service.yaml  model-router-application.yaml
devops/nginx/: nginx.conf
docs/: architecture.md  dev_workflow.md
model_router/: config.py  main.py  main_configuration.py
model_router/api/: routes.py
model_router/domain/: __init__.py  base.py  call_context.py  exceptions.py  models.py  providers.py  user.py
model_router/logger/: __init__.py
model_router/services/: model_router.py  user_service.py  user_token_service.py
model_router/services/adapters/: anthropic.py  base.py  deepseek.py  groq.py  openai.py
model_router/storages/: __init__.py  user_storage.py
src/model_router/: __init__.py  config.py  main.py
src/model_router/providers/: __init__.py  anthropic_provider.py  base.py  deepseek_provider.py  groq_provider.py  openai_provider.py
tests/: __init__.py  conftest.py  test_chat_completions.py  test_models.py  test_prefix_routing.py  test_user_endpoint.py
