[project]
name = "model-router"
version = "0.1.0"
description = "AI model routing service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "inject>=5.3.0",
    "ksuid>=1.3",
    "openai>=1.98.0",
    "pytest-env>=1.1.5",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src/model_router"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "ruff>=0.12.7",
]
